add sessions-service intergration